# r2r-manager

./: AGENTS.md  README.md  pyproject.toml
app/: document_discovery.py  git_metadata.py  project_config.py  project_manifest.py  r2r_client.py  r2r_compare.py  r2r_config.py  r2r_probe.py  r2r_sync.py  sync_plan.py
config/: projects.example.yaml
docs/: architecture.md  dev-setup.md  r2r-api-probe.md  sync-policy.md
projects/: autodub  edub  local-runtime-manager  voice-stack
scripts/: apply_r2r_sync.py  check_r2r_state.py  compare_r2r.py  plan_sync.py
tests/: test_document_discovery.py  test_git_metadata.py  test_project_config.py  test_project_manifest.py  test_r2r_compare.py  test_r2r_probe.py  test_r2r_sync.py  test_sync_plan_cli.py
