[project]
name = "r2r-manager"
version = "0.1.0"
description = "Local project-doc synchronization manager for R2R-backed cross-project knowledge."
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
